[project]
name = "news-boat"
version = "0.1.0"
description = "News-fetching agent using OpenAI web tool"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.58.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0",
    "chromadb",
    "ipykernel>=7.1.0",
]

[project.scripts]
news-agent = "news_agent.main:main"

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
